--- a/resources/test.html
+++ b/resources/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="stylesheets/master.css" type="text/css" />
   <title>Test HTML File</title>
 </head>
 <body>
